--- a/config/config.json.sample
+++ b/config/config.json.sample
@@ -1,21 +1,21 @@
 {
 
-    "123455677": {
-        "token": "1234123412341234",
+    "authid": {
+        "token": "token"
         "action": "line",
         "api": {
-            "token": "123412341234234213421341234"
+            "token": "your line notify token here"
         },
         "enable": true,
         "title" : "老司機存股俱樂部"
     },
 
-    "sdafasdfsd": {
-        "token": "asdfasdfsadf",
+    "authid": {
+        "token": "token"
         "action": "slack",
         "api": {
             "channel": "stock",
-            "token": "asdfasdfsdfsadfasdfsadfqwerqwer"
+            "token": "your slack token where"
         },
         "enable": true
     }
